--- a/src/components/MainBoard/Card/Card.module.css
+++ b/src/components/MainBoard/Card/Card.module.css
@@ -1,5 +1,8 @@
-.taskContainer {
+.taskModalContainer {
   position: relative;
+}
+
+.taskContainer {
   padding: 14px 20px 14px 24px;
   display: flex;
   flex-shrink: 0;
@@ -87,21 +90,6 @@
   border-radius: 50%;
   background-color: var(--default-color);
 }
-/* .priority-low::before {
-  background-color: #8fa1d0;
-}
-
-.priority-medium::before {
-  background-color: #e09cb5;
-}
-
-.priority-high::before {
-  background-color: #bedbb0;
-}
-
-.priority-without::before {
-  background-color: rgb(var(--text-color-mainboard), 0.3);
-} */
 
 .deadlineDate {
   font-weight: 400;
