--- a/src/components/MainBoard/InProgress/InProgress.module.css
+++ b/src/components/MainBoard/InProgress/InProgress.module.css
@@ -15,30 +15,17 @@
   stroke: rgba(var(--text-color-mainboard), 0.5);
 }
 
-.iconBell {
-  stroke: rgba(var(--button-color-modal));
-  filter: drop-shadow(0 0 6px rgba(var(--button-color-modal)));
-}
-
-.iconBellLose {
-  stroke: red;
-  filter: drop-shadow(0 0 6px red);
-}
-
-.icon:hover {
-  stroke: rgba(var(--text-color-mainboard));
-}
-
 .modalOverlay {
-  position: absolute;
-  top: 0;
-  left: 0;
   background-color: rgb(var(--background-modal-filters));
+  min-width: 134px;
   max-width: 100%;
   z-index: 1000;
   border: 1px solid rgb(var(--button-color-modal));
   border-radius: 8px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 6px;
+  right: 90px;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -79,4 +66,23 @@
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+  color: rgba(var(--text-color-mainboard), 0.5);
+}
+
+.active {
+  color: rgb(var(--button-color-modal));
+  stroke: rgb(var(--button-color-modal));
+}
+
+.column_box .column_text,
+.column_box .icon {
+  transition: color 0.3s ease, stroke 0.3s ease;
+}
+
+.column_box:hover .column_text,
+.column_box:focus .column_text,
+.column_box:hover .icon,
+.column_box:focus .icon {
+  color: rgba(var(--text-color-mainboard));
+  stroke: rgba(var(--text-color-mainboard));
 }
